@@ -1,6 +1,7 @@
 version 0.71.03
 	Support for K200D added by Jens Dreyer <jens.dreyer@udo.edu>
 	Better formatting of status info in command line interface
+	New command line argument: --exposure_compensation
 
 version 0.71.02 ( 2011-04-09 )
 	Reading jpeg hue (K-x only)
